# crossfit-wods

./: AGENTS.md  README.md  pyproject.toml  requirements.txt
app/: Home.py
app/pages/: 1_Catalogue.py  2_WOD_Detail.py  3_Explorer.py  4_Block_Builder.py
scripts/: audit_parser_window.py  debug_recent_page.py
src/crossfit_wods/: collect.py  db.py  enrich.py  export.py  models.py  movement_taxonomy.py  parse.py  scraper.py  taxonomy.py  units.py
tests/: test_conservative_ingestion.py  test_db_constraints.py  test_observability.py
