[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crossfit-wods"
version = "0.1.0"
description = "Incremental CrossFit WOD scraper and explorer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "streamlit>=1.32.0",
  "pyarrow>=15.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
